// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`@xsai/generate-object > basic 1`] = `{}`;

exports[`@xsai/generate-object > basic 2`] = `
{
  "": undefined,
}
`;

exports[`@xsai/generate-object > basic 3`] = `
{
  "recipe": undefined,
}
`;

exports[`@xsai/generate-object > basic 4`] = `
{
  "recipe": undefined,
}
`;

exports[`@xsai/generate-object > basic 5`] = `
{
  "recipe": {},
}
`;

exports[`@xsai/generate-object > basic 6`] = `
{
  "recipe": {
    "": undefined,
  },
}
`;

exports[`@xsai/generate-object > basic 7`] = `
{
  "recipe": {
    "ingredients": undefined,
  },
}
`;

exports[`@xsai/generate-object > basic 8`] = `
{
  "recipe": {
    "ingredients": undefined,
  },
}
`;

exports[`@xsai/generate-object > basic 9`] = `
{
  "recipe": {
    "ingredients": [],
  },
}
`;

exports[`@xsai/generate-object > basic 10`] = `
{
  "recipe": {
    "ingredients": [
      {},
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 11`] = `
{
  "recipe": {
    "ingredients": [
      {
        "": undefined,
      },
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 12`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": undefined,
      },
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 13`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": undefined,
      },
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 14`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "",
      },
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 15`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
      },
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 16`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
      },
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 17`] = `
{
  "recipe": {
    "ingredients": [
      {
        "": undefined,
        "amount": "2",
      },
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 18`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": undefined,
      },
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 19`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": undefined,
      },
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 20`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "",
      },
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 21`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "ste",
      },
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 22`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 23`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 24`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 25`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {},
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 26`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "": undefined,
      },
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 27`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": undefined,
      },
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 28`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": undefined,
      },
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 29`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "",
      },
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 30`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1",
      },
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 31`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/",
      },
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 32`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4",
      },
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 33`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
      },
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 34`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
      },
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 35`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": undefined,
      },
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 36`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": undefined,
      },
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 37`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "",
      },
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 38`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "ol",
      },
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 39`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive",
      },
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 40`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 41`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 42`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 43`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {},
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 44`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "": undefined,
      },
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 45`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": undefined,
      },
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 46`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": undefined,
      },
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 47`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": ">",
      },
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 48`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> ",
      },
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 49`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1",
      },
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 50`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
      },
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 51`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
      },
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 52`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": undefined,
      },
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 53`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": undefined,
      },
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 54`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "",
      },
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 55`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kos",
      },
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 56`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher",
      },
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 57`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 58`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 59`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 60`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {},
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 61`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "": undefined,
      },
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 62`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": undefined,
      },
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 63`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": undefined,
      },
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 64`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": ">",
      },
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 65`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> ",
      },
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 66`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1",
      },
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 67`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
      },
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 68`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
      },
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 69`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": undefined,
      },
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 70`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": undefined,
      },
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 71`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "",
      },
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 72`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black",
      },
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 73`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 74`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 75`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 76`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {},
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 77`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "": undefined,
      },
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 78`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": undefined,
      },
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 79`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": undefined,
      },
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 80`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "",
      },
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 81`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2",
      },
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 82`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
      },
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 83`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
      },
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 84`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": undefined,
      },
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 85`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": undefined,
      },
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 86`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "",
      },
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 87`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh",
      },
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 88`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 89`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 90`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 91`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 92`] = `
{
  "recipe": {
    "": undefined,
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 93`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "n": undefined,
  },
}
`;

exports[`@xsai/generate-object > basic 94`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": undefined,
  },
}
`;

exports[`@xsai/generate-object > basic 95`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": undefined,
  },
}
`;

exports[`@xsai/generate-object > basic 96`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": "",
  },
}
`;

exports[`@xsai/generate-object > basic 97`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous",
  },
}
`;

exports[`@xsai/generate-object > basic 98`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-V",
  },
}
`;

exports[`@xsai/generate-object > basic 99`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide",
  },
}
`;

exports[`@xsai/generate-object > basic 100`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak",
  },
}
`;

exports[`@xsai/generate-object > basic 101`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with",
  },
}
`;

exports[`@xsai/generate-object > basic 102`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb",
  },
}
`;

exports[`@xsai/generate-object > basic 103`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter",
  },
}
`;

exports[`@xsai/generate-object > basic 104`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
  },
}
`;

exports[`@xsai/generate-object > basic 105`] = `
{
  "recipe": {
    "": undefined,
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
  },
}
`;

exports[`@xsai/generate-object > basic 106`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "step": undefined,
  },
}
`;

exports[`@xsai/generate-object > basic 107`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": undefined,
  },
}
`;

exports[`@xsai/generate-object > basic 108`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": undefined,
  },
}
`;

exports[`@xsai/generate-object > basic 109`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [],
  },
}
`;

exports[`@xsai/generate-object > basic 110`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "",
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 111`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step",
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 112`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step ",
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 113`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step 1",
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 114`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step 1:",
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 115`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step 1: Prepare",
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 116`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step 1: Prepare the",
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 117`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step 1: Prepare the steak",
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 118`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step 1: Prepare the steak and",
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 119`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step 1: Prepare the steak and seasoning",
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 120`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step 1: Prepare the steak and seasoning:",
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 121`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step 1: Prepare the steak and seasoning:",
      "P",
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 122`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step 1: Prepare the steak and seasoning:",
      "PPre",
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 123`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step 1: Prepare the steak and seasoning:",
      "PPreheat",
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 124`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step 1: Prepare the steak and seasoning:",
      "PPreheat your",
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 125`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step 1: Prepare the steak and seasoning:",
      "PPreheat your sous",
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 126`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step 1: Prepare the steak and seasoning:",
      "PPreheat your sous-v",
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 127`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step 1: Prepare the steak and seasoning:",
      "PPreheat your sous-vide",
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 128`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step 1: Prepare the steak and seasoning:",
      "PPreheat your sous-vide machine",
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 129`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step 1: Prepare the steak and seasoning:",
      "PPreheat your sous-vide machine to",
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 130`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step 1: Prepare the steak and seasoning:",
      "PPreheat your sous-vide machine to ",
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 131`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step 1: Prepare the steak and seasoning:",
      "PPreheat your sous-vide machine to 130",
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 132`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step 1: Prepare the steak and seasoning:",
      "PPreheat your sous-vide machine to 130°",
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 133`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step 1: Prepare the steak and seasoning:",
      "PPreheat your sous-vide machine to 130°F",
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 134`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step 1: Prepare the steak and seasoning:",
      "PPreheat your sous-vide machine to 130°F (",
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 135`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step 1: Prepare the steak and seasoning:",
      "PPreheat your sous-vide machine to 130°F (54",
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 136`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step 1: Prepare the steak and seasoning:",
      "PPreheat your sous-vide machine to 130°F (54°",
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 137`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step 1: Prepare the steak and seasoning:",
      "PPreheat your sous-vide machine to 130°F (54°C",
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 138`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step 1: Prepare the steak and seasoning:",
      "PPreheat your sous-vide machine to 130°F (54°C).",
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 139`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step 1: Prepare the steak and seasoning:",
      "PPreheat your sous-vide machine to 130°F (54°C).",
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 140`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step 1: Prepare the steak and seasoning:",
      "PPreheat your sous-vide machine to 130°F (54°C).",
      "I",
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 141`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step 1: Prepare the steak and seasoning:",
      "PPreheat your sous-vide machine to 130°F (54°C).",
      "Iter",
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 142`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step 1: Prepare the steak and seasoning:",
      "PPreheat your sous-vide machine to 130°F (54°C).",
      "Iterate",
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 143`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step 1: Prepare the steak and seasoning:",
      "PPreheat your sous-vide machine to 130°F (54°C).",
      "Iterate over",
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 144`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step 1: Prepare the steak and seasoning:",
      "PPreheat your sous-vide machine to 130°F (54°C).",
      "Iterate over your",
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 145`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step 1: Prepare the steak and seasoning:",
      "PPreheat your sous-vide machine to 130°F (54°C).",
      "Iterate over your steak",
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 146`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step 1: Prepare the steak and seasoning:",
      "PPreheat your sous-vide machine to 130°F (54°C).",
      "Iterate over your steak using",
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 147`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step 1: Prepare the steak and seasoning:",
      "PPreheat your sous-vide machine to 130°F (54°C).",
      "Iterate over your steak using kosher",
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 148`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step 1: Prepare the steak and seasoning:",
      "PPreheat your sous-vide machine to 130°F (54°C).",
      "Iterate over your steak using kosher salt",
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 149`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step 1: Prepare the steak and seasoning:",
      "PPreheat your sous-vide machine to 130°F (54°C).",
      "Iterate over your steak using kosher salt.",
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 150`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step 1: Prepare the steak and seasoning:",
      "PPreheat your sous-vide machine to 130°F (54°C).",
      "Iterate over your steak using kosher salt. G",
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 151`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step 1: Prepare the steak and seasoning:",
      "PPreheat your sous-vide machine to 130°F (54°C).",
      "Iterate over your steak using kosher salt. Gently",
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 152`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step 1: Prepare the steak and seasoning:",
      "PPreheat your sous-vide machine to 130°F (54°C).",
      "Iterate over your steak using kosher salt. Gently press",
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 153`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step 1: Prepare the steak and seasoning:",
      "PPreheat your sous-vide machine to 130°F (54°C).",
      "Iterate over your steak using kosher salt. Gently press it",
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 154`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step 1: Prepare the steak and seasoning:",
      "PPreheat your sous-vide machine to 130°F (54°C).",
      "Iterate over your steak using kosher salt. Gently press it onto",
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 155`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step 1: Prepare the steak and seasoning:",
      "PPreheat your sous-vide machine to 130°F (54°C).",
      "Iterate over your steak using kosher salt. Gently press it onto the",
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 156`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step 1: Prepare the steak and seasoning:",
      "PPreheat your sous-vide machine to 130°F (54°C).",
      "Iterate over your steak using kosher salt. Gently press it onto the cut",
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 157`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step 1: Prepare the steak and seasoning:",
      "PPreheat your sous-vide machine to 130°F (54°C).",
      "Iterate over your steak using kosher salt. Gently press it onto the cut.",
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 158`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step 1: Prepare the steak and seasoning:",
      "PPreheat your sous-vide machine to 130°F (54°C).",
      "Iterate over your steak using kosher salt. Gently press it onto the cut.",
      "He",
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 159`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step 1: Prepare the steak and seasoning:",
      "PPreheat your sous-vide machine to 130°F (54°C).",
      "Iterate over your steak using kosher salt. Gently press it onto the cut.",
      "Heat",
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 160`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step 1: Prepare the steak and seasoning:",
      "PPreheat your sous-vide machine to 130°F (54°C).",
      "Iterate over your steak using kosher salt. Gently press it onto the cut.",
      "Heat olive",
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 161`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step 1: Prepare the steak and seasoning:",
      "PPreheat your sous-vide machine to 130°F (54°C).",
      "Iterate over your steak using kosher salt. Gently press it onto the cut.",
      "Heat olive oil",
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 162`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step 1: Prepare the steak and seasoning:",
      "PPreheat your sous-vide machine to 130°F (54°C).",
      "Iterate over your steak using kosher salt. Gently press it onto the cut.",
      "Heat olive oil in",
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 163`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step 1: Prepare the steak and seasoning:",
      "PPreheat your sous-vide machine to 130°F (54°C).",
      "Iterate over your steak using kosher salt. Gently press it onto the cut.",
      "Heat olive oil in a",
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 164`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step 1: Prepare the steak and seasoning:",
      "PPreheat your sous-vide machine to 130°F (54°C).",
      "Iterate over your steak using kosher salt. Gently press it onto the cut.",
      "Heat olive oil in a pre",
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 165`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step 1: Prepare the steak and seasoning:",
      "PPreheat your sous-vide machine to 130°F (54°C).",
      "Iterate over your steak using kosher salt. Gently press it onto the cut.",
      "Heat olive oil in a prehe",
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 166`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step 1: Prepare the steak and seasoning:",
      "PPreheat your sous-vide machine to 130°F (54°C).",
      "Iterate over your steak using kosher salt. Gently press it onto the cut.",
      "Heat olive oil in a preheated",
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 167`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step 1: Prepare the steak and seasoning:",
      "PPreheat your sous-vide machine to 130°F (54°C).",
      "Iterate over your steak using kosher salt. Gently press it onto the cut.",
      "Heat olive oil in a preheated pan",
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 168`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step 1: Prepare the steak and seasoning:",
      "PPreheat your sous-vide machine to 130°F (54°C).",
      "Iterate over your steak using kosher salt. Gently press it onto the cut.",
      "Heat olive oil in a preheated pan for",
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 169`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step 1: Prepare the steak and seasoning:",
      "PPreheat your sous-vide machine to 130°F (54°C).",
      "Iterate over your steak using kosher salt. Gently press it onto the cut.",
      "Heat olive oil in a preheated pan for added",
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 170`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step 1: Prepare the steak and seasoning:",
      "PPreheat your sous-vide machine to 130°F (54°C).",
      "Iterate over your steak using kosher salt. Gently press it onto the cut.",
      "Heat olive oil in a preheated pan for added flavor",
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 171`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step 1: Prepare the steak and seasoning:",
      "PPreheat your sous-vide machine to 130°F (54°C).",
      "Iterate over your steak using kosher salt. Gently press it onto the cut.",
      "Heat olive oil in a preheated pan for added flavor.",
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 172`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step 1: Prepare the steak and seasoning:",
      "PPreheat your sous-vide machine to 130°F (54°C).",
      "Iterate over your steak using kosher salt. Gently press it onto the cut.",
      "Heat olive oil in a preheated pan for added flavor.",
      "W",
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 173`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step 1: Prepare the steak and seasoning:",
      "PPreheat your sous-vide machine to 130°F (54°C).",
      "Iterate over your steak using kosher salt. Gently press it onto the cut.",
      "Heat olive oil in a preheated pan for added flavor.",
      "WWrap",
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 174`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step 1: Prepare the steak and seasoning:",
      "PPreheat your sous-vide machine to 130°F (54°C).",
      "Iterate over your steak using kosher salt. Gently press it onto the cut.",
      "Heat olive oil in a preheated pan for added flavor.",
      "WWrap ste",
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 175`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step 1: Prepare the steak and seasoning:",
      "PPreheat your sous-vide machine to 130°F (54°C).",
      "Iterate over your steak using kosher salt. Gently press it onto the cut.",
      "Heat olive oil in a preheated pan for added flavor.",
      "WWrap steaks",
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 176`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step 1: Prepare the steak and seasoning:",
      "PPreheat your sous-vide machine to 130°F (54°C).",
      "Iterate over your steak using kosher salt. Gently press it onto the cut.",
      "Heat olive oil in a preheated pan for added flavor.",
      "WWrap steaks with",
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 177`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step 1: Prepare the steak and seasoning:",
      "PPreheat your sous-vide machine to 130°F (54°C).",
      "Iterate over your steak using kosher salt. Gently press it onto the cut.",
      "Heat olive oil in a preheated pan for added flavor.",
      "WWrap steaks with parchment",
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 178`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step 1: Prepare the steak and seasoning:",
      "PPreheat your sous-vide machine to 130°F (54°C).",
      "Iterate over your steak using kosher salt. Gently press it onto the cut.",
      "Heat olive oil in a preheated pan for added flavor.",
      "WWrap steaks with parchment,",
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 179`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step 1: Prepare the steak and seasoning:",
      "PPreheat your sous-vide machine to 130°F (54°C).",
      "Iterate over your steak using kosher salt. Gently press it onto the cut.",
      "Heat olive oil in a preheated pan for added flavor.",
      "WWrap steaks with parchment, season",
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 180`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step 1: Prepare the steak and seasoning:",
      "PPreheat your sous-vide machine to 130°F (54°C).",
      "Iterate over your steak using kosher salt. Gently press it onto the cut.",
      "Heat olive oil in a preheated pan for added flavor.",
      "WWrap steaks with parchment, seasoning",
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 181`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step 1: Prepare the steak and seasoning:",
      "PPreheat your sous-vide machine to 130°F (54°C).",
      "Iterate over your steak using kosher salt. Gently press it onto the cut.",
      "Heat olive oil in a preheated pan for added flavor.",
      "WWrap steaks with parchment, seasoning them",
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 182`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step 1: Prepare the steak and seasoning:",
      "PPreheat your sous-vide machine to 130°F (54°C).",
      "Iterate over your steak using kosher salt. Gently press it onto the cut.",
      "Heat olive oil in a preheated pan for added flavor.",
      "WWrap steaks with parchment, seasoning them accordingly",
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 183`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step 1: Prepare the steak and seasoning:",
      "PPreheat your sous-vide machine to 130°F (54°C).",
      "Iterate over your steak using kosher salt. Gently press it onto the cut.",
      "Heat olive oil in a preheated pan for added flavor.",
      "WWrap steaks with parchment, seasoning them accordingly.",
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 184`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step 1: Prepare the steak and seasoning:",
      "PPreheat your sous-vide machine to 130°F (54°C).",
      "Iterate over your steak using kosher salt. Gently press it onto the cut.",
      "Heat olive oil in a preheated pan for added flavor.",
      "WWrap steaks with parchment, seasoning them accordingly.",
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 185`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step 1: Prepare the steak and seasoning:",
      "PPreheat your sous-vide machine to 130°F (54°C).",
      "Iterate over your steak using kosher salt. Gently press it onto the cut.",
      "Heat olive oil in a preheated pan for added flavor.",
      "WWrap steaks with parchment, seasoning them accordingly.",
    ],
  },
}
`;

exports[`@xsai/generate-object > basic 186`] = `
{
  "recipe": {
    "ingredients": [
      {
        "amount": "2",
        "name": "steak",
      },
      {
        "amount": "1/4 cup",
        "name": "olive oil",
      },
      {
        "amount": "> 1 tsp",
        "name": "kosher salt",
      },
      {
        "amount": "> 1 tsp",
        "name": "black pepper",
      },
      {
        "amount": "2 tbsp",
        "name": "fresh parsley",
      },
    ],
    "name": " Sous-Vide Steak with Herb Butter ",
    "steps": [
      "Step 1: Prepare the steak and seasoning:",
      "PPreheat your sous-vide machine to 130°F (54°C).",
      "Iterate over your steak using kosher salt. Gently press it onto the cut.",
      "Heat olive oil in a preheated pan for added flavor.",
      "WWrap steaks with parchment, seasoning them accordingly.",
    ],
  },
}
`;
